# FEMS

./: .gitignore  LICENSE  README.md  docker-compose.yaml  dockerfile  pyproject.toml
FEMS_app/: apps.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py  wsgi.py
src/: index.html
src/energy/: index.css  index.html
src/energy/detail/: biomed.css  biomed.html  food.html  melting.html  paper.css  paper.html
src/industrial/: index.html
src/optimized/: index.css  index.html
src/optimized/detail/: biomed.html  food.css  food.html  melting.html  paper.html
static/: constants.js  index.css  index.js
static/data/: FEMS홍보사이트_Flow 및 동작정의.pptx  test.js  test.json
static/data/2-(2)(3)(4)(5)-2)/: [그래프작성위한정리파일]업종별에너지사용량규모별.xlsx  data.json  paper_data.xlsx  pharma_data.xlsx
static/data/2-(2)(3)(4)(5)-2) 업종별에너지사용량 규모별 에너지소비량 기업수/: food_data.xlsx  solvent_data.xlsx
static/data/2-(2)(3)(4)(5)-3) 업종별 설비별 에너지원별 에너지소비량/: pharma_data.xlsx  (+1 more)
static/energy/: index.css  index.js
static/industrial/: index.css  index.js
static/js/: test.js
static/styles/: color.css  reset.css
templates/: energy_overview.html  index.html  landing.html  paper_technology.html  profit.html  technology_overview.html  trends_overview.html
templates/.old/: food_energy.html  food_technology.html  investment.html  landing.html  management_investment.html  paper_energy.html  pharma_energy.html  pharma_technology.html  sales_production.html  solvent_energy.html  solvent_technology.html
templates/energy/: index.html
templates/industrial/: index.html
templates/optimized/: index.html
(+197 files in other folders)
